--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -21,7 +21,8 @@
 </nav>
 <section class="content">
   <header>
-    {% block header %}{% endblock %}
+    {% block header %}
+    {% endblock %}
   </header>
   {% for message in get_flashed_messages() %}
   <div class="flash">{{ message }}</div>
