--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,15 +1,18 @@
 table, th, td {
-    border:1px solid black;
+    border: 1px solid black;
     text-align: center;
-  }
-td{
+}
+
+section.businessBoard>td {
     position: relative;
 }
-.horizontal > td{
+
+.horizontal>td {
     width: 50px;
     height: 200px;
 }
-.vertical > td{
+
+.vertical>td {
     width: 100px;
     height: 100px;
 }
@@ -17,7 +20,58 @@ td{
 .avatar {
     width: 50px;
 }
-#player2{
+
+#player2 {
     position: absolute;
     left: -1px;
+}
+
+.propertyCard {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 15%;
+    margin: 10px;
+}
+
+.propertyCard:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.propertyCardTitle {
+    padding: 5px 10px;
+    border: 1px solid black;
+    text-align: center;
+}
+
+.purple {
+    background-color: #6200ee;
+}
+
+.propertyCardDetails{
+    padding: 10px;
+}
+
+.propertyCardDetailsTable {
+    width: 100%;
+    border: none;
+}
+
+.propertyCardDetailsTable td{
+    border: none;
+}
+.rentType{
+    text-align: left;
+}
+.rentPrice{
+    text-align: right;
+}
+
+.propertyActions{
+    width: 100%;
+    border: none;
+    text-align: center;
+}
+.propertyActions td{
+    border: none;
+    text-align: center;
 }
