Board layout update

--- a/flaskr/templates/game/board.html
+++ b/flaskr/templates/game/board.html
@@ -12,8 +12,15 @@
 <section class="businessBoard">
 <table style="width: 100%;border: 1px solid;">
     <tr class="horizontal">
-        <td id="b0">0</td>
-        <td id="b1">1</td>
+        <td id="b0"><div class="playerSpace"></div></td>
+        <td id="b1">
+            <div class="spaceDetails">
+                <div class="propertyGroup"></div>
+                <div class="propertyName"></div>
+                <div class="propertyPrice"></div>
+            </div>
+            <div class="playerSpace"></div>
+        </td>
         <td id="b2">2</td>
         <td id="b3">3</td>
         <td id="b4">4</td>
@@ -24,7 +31,7 @@
         <td id="b9">9</td>
         <td id="b10">10</td>
     </tr>
-    <tr class="vertical">
+    <tr class="vertical vertical_right">
         <td id="b39">39</td>
         <td id="centerSpace" colspan="9" rowspan="9">
             <div>
