--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,24 +1,47 @@
-table, th, td {
+table,
+th,
+td {
     border: 1px solid black;
     text-align: center;
+    margin: 0px;
+    position: relative;
+    /* max-width: 15ch; */
+}
+
+.businessBoard{
+    background-color: #E0F2F1;
 }
 
 section.businessBoard>td {
+    margin: 0px;
     position: relative;
 }
 
 .horizontal>td {
-    width: 50px;
+    width: 100px;
     height: 200px;
 }
 
 .vertical>td {
-    width: 100px;
+    width: 150px;
     height: 100px;
 }
 
+/* .vertical_right>td>div{
+    transform: rotate(-90deg);
+} */
+
 .avatar {
     width: 50px;
+    z-index: 9;
+}
+
+.boardDetails {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 #player2 {
@@ -47,7 +70,7 @@ section.businessBoard>td {
     background-color: #6200ee;
 }
 
-.propertyCardDetails{
+.propertyCardDetails {
     padding: 10px;
 }
 
@@ -56,22 +79,29 @@ section.businessBoard>td {
     border: none;
 }
 
-.propertyCardDetailsTable td{
+.propertyCardDetailsTable td {
     border: none;
 }
-.rentType{
+
+.rentType {
     text-align: left;
 }
-.rentPrice{
+
+.rentPrice {
     text-align: right;
 }
 
-.propertyActions{
+.propertyActions {
     width: 100%;
     border: none;
     text-align: center;
 }
-.propertyActions td{
+
+.propertyActions td {
     border: none;
     text-align: center;
 }
+
+/* .propertyName{
+    max-width: 15ch;
+} */
