auction function completed

--- a/flaskr/templates/game/board.html
+++ b/flaskr/templates/game/board.html
@@ -6,13 +6,21 @@
 <div>
     <button type="button" onclick=surrender()>Surrender</button>
 </div>
+<hr>
 <div class="log">
-    <hr>
+    
     <label for="chat">log:</label>
     <br>
     <textarea id="chat" cols="80" rows="10"></textarea><br>
-    <hr>
+    
 </div>
+<div class="popShop">
+    <div class="popEvent">
+        
+    </div>
+</div>
+<hr>
+
 {% endblock %}
 
 {% block content %}
